live changes done

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                                         <li><a href="services.html">Services</a>
                                             <ul>
                                                <li><a href="business-advisor.html">Business Advisor</a></li> 
-                                              
+                                               <li><a href="business-consultant.html">Business Consultant</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="contact.html">Contact</a></li>
