--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
                                         <li><a href="about.html">About Us</a></li>
                                         <li><a href="services.html">Services</a>
                                             <ul>
-                                               <li><a href="business-advisor.html">Business Advisor</a></li> 
+                                               <li><a href="business-advisor.html">Business Advisory</a></li> 
                                                <li><a href="business-consultant.html">Business Consultant</a></li>
-                                               <li><a href="economic-consultant.html">Economic Consultant</a></li> 
                                             </ul>
                                         </li>
                                         <li><a href="contact.html">Contact</a></li>
@@ -196,7 +195,7 @@
                             <div class="service-img">
                                 <img src="img/icons/icon-10.png" alt="..." class="w-50px">
                             </div>
-                            <h3 class="h4 mb-2"><a href="#">Strategic Planning</a></h3>
+                            <h3 class="h4 mb-2"><a href="#">Business Strategies</a></h3>
                             <p class="mb-1-9">Crafting a clear roadmap to achieve your long-term business goals.</p>
                             <a href="#" class="service-butn">Read More<i class="ti-arrow-right"></i></a>
                         </div>
@@ -207,165 +206,41 @@
                             <div class="service-img">
                                 <img src="img/icons/icon-11.png" alt="..." class="w-50px">
                             </div>
-                            <h3 class="h4 mb-2"><a href="business-strategy.html">Business Strategy</a></h3>
+                            <h3 class="h4 mb-2"><a href="business-strategy.html">Economic Advisory</a></h3>
                             <p class="mb-1-9">Creating a focused plan to guide your company’s growth and advantage.</p>
                             <a href="business-strategy.html" class="service-butn">Read More<i class="ti-arrow-right"></i></a>
                         </div>
                         <div class="card-overlay"></div>
                     </div>
-                    <div class="card card-style03 rounded border-0">
+                    <!-- <div class="card card-style03 rounded border-0">
                         <div class="card-body position-relative z-index-9">
                             <div class="service-img">
                                 <img src="img/icons/icon-12.png" alt="..." class="w-50px">
                             </div>
-                            <h3 class="h4 mb-2"><a href="#">Financial Modeling</a></h3>
+                            <h3 class="h4 mb-2"><a href="#">Business Management</a></h3>
                             <p class="mb-1-9">Building data-driven forecasts to support informed business decisions.</p>
                             <a href="#" class="service-butn">Read More<i class="ti-arrow-right"></i></a>
                         </div>
                         <div class="card-overlay"></div>
-                    </div>
+                    </div> -->
                     <div class="card card-style03 rounded border-0">
                         <div class="card-body position-relative z-index-9">
                             <div class="service-img">
                                 <img src="img/icons/icon-13.png" alt="..." class="w-50px">
                             </div>
-                            <h3 class="h4 mb-2"><a href="#">Marketing Strategy</a></h3>
+                            <h3 class="h4 mb-2"><a href="#">Strategic Management in Services</a></h3>
                             <p class="mb-1-9">Developing targeted plans to attract, and retain your ideal customers.</p>
                             <a href="#" class="service-butn">Read More<i class="ti-arrow-right"></i></a>
                         </div>
                         <div class="card-overlay"></div>
                     </div>
-                    <div class="card card-style03 rounded border-0">
-                        <div class="card-body position-relative z-index-9">
-                            <div class="service-img">
-                                <img src="img/icons/icon-14.png" alt="..." class="w-50px">
-                            </div>
-                            <h3 class="h4 mb-2"><a href="#">Financial Advisory</a></h3>
-                            <p class="mb-1-9">Financial advisory is expert advice to help you make smart financial decisions.</p>
-                            <a href="#" class="service-butn">Read More<i class="ti-arrow-right"></i></a>
-                        </div>
-                        <div class="card-overlay"></div>
-                    </div>
-                    <div class="card card-style03 rounded border-0">
-                        <div class="card-body position-relative z-index-9">
-                            <div class="service-img">
-                                <img src="img/icons/icon-15.png" alt="..." class="w-50px">
-                            </div>
-                            <h3 class="h4 mb-2"><a href="#">Talent Management</a></h3>
-                            <p class="mb-1-9">Attracting, developing, and retaining skilled employees to maximize.</p>
-                            <a href="#" class="service-butn">Read More<i class="ti-arrow-right"></i></a>
-                        </div>
-                        <div class="card-overlay"></div>
-                    </div>
                 </div>
             </div>
         </section>
 
-        <!--EXTRA -->
-        <section class="bg-secondary">
-            <div class="container">
-                <div class="row mt-n1-9">
-                    <div class="col-lg-6 mt-1-9">
-                        <div class="section-title01 mb-1-9">
-                            <span class="text-primary text-uppercase small letter-spacing-4 d-block mb-3 font-weight-700">Our Skills</span>
-                            <h2 class="display-4 font-weight-800 lh-1 ls-minus-2px mb-0 text-white">Evidence of strategic <span class="title-sm">business success</span></h2>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 mt-1-9">
-                        <div class="progress-style1 ps-lg-2-9">
-                            <div>
-                                <div class="progress-text">
-                                    <div class="row mb-2">
-                                        <div class="col-6 fw-bold text-white">Client Satisfaction</div>
-                                        <div class="col-6 text-end text-white">65%</div>
-                                    </div>
-                                </div>
-                                <div class="custom-progress progress rounded-3 mb-4">
-                                    <div class="animated custom-bar progress-bar slideInLeft" style="width:65%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" role="progressbar"></div>
-                                </div>
-                            </div>
-                            <div>
-                                <div class="progress-text">
-                                    <div class="row mb-2">
-                                        <div class="col-6 fw-bold text-white">Projects Completed</div>
-                                        <div class="col-6 text-end text-white">85%</div>
-                                    </div>
-                                </div>
-                                <div class="custom-progress progress rounded-3 mb-4">
-                                    <div class="animated custom-bar progress-bar slideInLeft" style="width:95%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" role="progressbar"></div>
-                                </div>
-                            </div>
-                            <div>
-                                <div class="progress-text">
-                                    <div class="row mb-2">
-                                        <div class="col-6 fw-bold text-white">Cost Reduction</div>
-                                        <div class="col-6 text-end text-white">50%</div>
-                                    </div>
-                                </div>
-                                <div class="custom-progress progress rounded-3 mb-0">
-                                    <div class="animated custom-bar progress-bar slideInLeft" style="width:50%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" role="progressbar"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!--WHY-CHOOSE-US -->
-        <section class="whyus-style01 pt-lg-0 pb-0">
-            <div class="container-fluid px-sm-6 px-xxl-10">
-                <div class="row g-xxl-5">
-                    <div class="col-lg-6">
-                        <div class="pb-lg-6 py-lg-10 py-xxl-15">
-                            <div class="section-title01 mb-1-9 wow fadeInUp" data-wow-delay="100ms">
-                                <span class="text-primary text-uppercase small letter-spacing-4 d-block mb-3 font-weight-700">Why choose us</span>
-                                <h2 class="display-4 font-weight-800 lh-1 ls-minus-2px mb-0">Where insight meets <span class="title-sm">business growth</span></h2>
-                            </div>
-                            <div class="whyus-content wow fadeInUp" data-wow-delay="150ms">
-                                <div class="d-md-flex gap-md-4 align-items-md-center">
-                                    <div>
-                                        <div class="about-text rotating d-none d-md-block">
-                                            <svg viewBox="0 0 200 200">
-                                                <path id="textPath" d="M 85,0 A 85,85 0 0 1 -85,0 A 85,85 0 0 1 85,0" transform="translate(100,100)" fill="none" stroke-width="0"></path>
-                                                <g font-size="22.7px">
-                                                    <text text-anchor="start">
-                                                        <textPath class="coloring" xlink:href="#textPath" startOffset="0%">building bright future making good memories. </textPath>
-                                                    </text>
-                                                </g>
-                                            </svg>
-                                            <div class="about-icon"><img src="img/logos/favicon.png" alt="..." class="w-50px"></div>
-                                        </div>
-                                    </div>
-                                    <div class="mb-1-6 mb-md-0">
-                                        <div class="whyus-bg bg-primary">
-                                            <img src="img/icons/icon-18.png" alt="..." class="w-40px mb-4">
-                                            <h5 class="mb-2 text-white">Trusted Partners</h5>
-                                            <p class="display-28 text-white opacity8">We build long-term relationships and a deep commitment to your success.</p>
-                                            <a href="about.html" class="button-link text-white">Read More</a>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="whyus-bg bg-secondary">
-                                            <img src="img/icons/icon-19.png" alt="..." class="w-40px mb-4">
-                                            <h5 class="mb-2 text-white">Innovative Thinking</h5>
-                                            <p class="display-28 text-white opacity8">We bring fresh perspectives and creative solutions to solve complex business challenges.</p>
-                                            <a href="about.html" class="button-link text-white">Read More</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 d-none d-lg-block">
-                        <div class="bg-img cover-background h-100 vw-lg-50 rounded-left-bottom" data-background="img/content/why-choose-01.jpg"></div>
-                    </div>
-                </div>
-            </div>
-        </section>
 
         <!--PROJECTS -->
-        <section>
+        <section class="pt-5">
             <div class="container">
                 <div class="section-title01 mb-1-9 text-center">
                     <span class="text-primary text-uppercase small letter-spacing-4 d-block mb-3 font-weight-700">Our Portfolio</span>
@@ -655,22 +530,22 @@
                             </div>
                             <ul class="mb-0 list-unstyled list-style02">
                                 <li><a href="business-advisor.html">Ai Development</a></li>
-                                <li><a href="business-advisor.html">Business Strategy</a></li>
-                                <li><a href="business-advisor.html">Financial Modeling</a></li>
-                                <li><a href="business-advisor.html">Marketing Strategy</a><li>
-                                <li><a href="business-advisor.html">Financial Advisory</a></li>
+                                <li><a href="business-consultant.html">Business Strategies</a></li>
+                                <li><a href="business-advisor.html">Economic Advisory</a></li>
+                                <!-- <li><a href="business-advisor.html">Business Management</a></li> -->
+                                <li><a href="business-advisor.html">Strategic Management in Services</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-2 mt-2-6">
                         <div>
                             <div class="section-title-01 mb-1-6">
-                                <h2 class="h4 font-weight-600 mb-0 text-white">Our Skills</h2>
+                                <h2 class="h4 font-weight-600 mb-0 text-white">Our Process</h2>
                             </div>
                             <ul class="mb-0 list-unstyled list-style02">
-                                <li><a href="#">Client Satisfaction</a></li>
-                                <li><a href="#">Projects Completed</a></li>
-                                <li><a href="#">Cost Reduction</a></li>
+                                <li><a href="#">Discovery & Planning</a></li>
+                                <li><a href="#">Strategy & Design</a></li>
+                                <li><a href="#">Execution & Support</a></li>
                             </ul>
                         </div>
                     </div>
@@ -680,14 +555,14 @@
                                 <h2 class="h4 font-weight-600 mb-0 text-white">Need help?</h2>
                             </div>
                             <ul class="mb-0 list-unstyled list-style02">
-                                <li>Call us directly? <br>
+                                <!-- <li>Call us directly? <br>
                                     <a href="tel:+254202713345">(+254) 20 271 3345 </a>
-                                </li>
+                                </li> -->
                                 <li>Need support?<br>
-                                    <a href="mailto:info.dtglobal@gmail.com">info.dtglobal@gmail.com</a>
+                                    <a href="mailto:dtglobal87@gmail.com">dtglobal87@gmail.com</a>
                                 </li>
                                 <li>Locate me?<br>
-                                    <a href="">Africa Corporate Office</a>
+                                    <a href="">Global</a>
                                 </li>
                             </ul>
                         </div>
