--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                                         <li><a href="about.html">About Us</a></li>
                                         <li><a href="services.html">Services</a>
                                             <ul>
-                                               <li><a href="business-advisor.html">Business Advisor</a></li>
+                                               <li><a href="business-advisor.html">Business Advisory</a></li>
                                                <li><a href="business-consultant.html">Business Consultant</a></li> 
                                             </ul>
                                         </li>
@@ -211,11 +211,11 @@
                                     <h4>Africa</h4>
                                     <p class="mb-0">Africa Corporate Office</p>
                                 </div>
-                                <div class="col-sm-6 mt-1-9">
+                                <!-- <div class="col-sm-6 mt-1-9">
                                     <h4>Phone</h4>
                                     <p class="mb-0"><a href="tel:+254202713345" class="text-primary text-secondary-hover">(+254) 20 271 3345</a></p>
-                                    <!-- <p class="mb-0"><a href="tel:+44152-567-987" class="text-primary text-secondary-hover">(+44) 123 456 789</a></p> -->
-                                </div>
+                                    <p class="mb-0"><a href="tel:+44152-567-987" class="text-primary text-secondary-hover">(+44) 123 456 789</a></p>
+                                </div> -->
                                 <div class="col-sm-6 mt-1-9">
                                     <h4>Follow us</h4>
                                     <ul class="social-icon-style02 list-unstyled">
@@ -228,7 +228,7 @@
                                 <div class="col-sm-6 mt-1-9">
                                     <h4>Email</h4>
                                     <p class="mb-0">Interested in working with us?</p>
-                                    <p class="mb-0"><a href="mailto:info@domain.com" class="text-decoration-underline text-primary text-secondary-hover">info@dt-global.com</a></p>
+                                    <p class="mb-0"><a href="mailto:dtglobal87@gmail.com" class="text-decoration-underline text-primary text-secondary-hover">dtglobal87@gmail.com</a></p>
                                 </div>
                             </div>
                             <div class="contact-text wow fadeInUp" data-wow-delay="200ms">
@@ -301,22 +301,22 @@
                             </div>
                             <ul class="mb-0 list-unstyled list-style02">
                                 <li><a href="business-advisor.html">Ai Development</a></li>
-                                <li><a href="business-advisor.html">Business Strategy</a></li>
-                                <li><a href="business-advisor.html">Financial Modeling</a></li>
-                                <li><a href="business-advisor.html">Marketing Strategy</a><li>
-                                <li><a href="business-advisor.html">Financial Advisory</a></li>
+                                <li><a href="business-consultant.html">Business Strategies</a></li>
+                                <li><a href="business-advisor.html">Economic Advisory</a></li>
+                                <!-- <li><a href="business-advisor.html">Business Management</a></li> -->
+                                <li><a href="business-advisor.html">Strategic Management in Services</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-2 mt-2-6">
                         <div>
                             <div class="section-title-01 mb-1-6">
-                                <h2 class="h4 font-weight-600 mb-0 text-white">Our Skills</h2>
+                                <h2 class="h4 font-weight-600 mb-0 text-white">Our Process</h2>
                             </div>
                             <ul class="mb-0 list-unstyled list-style02">
-                                <li><a href="#">Client Satisfaction</a></li>
-                                <li><a href="#">Projects Completed</a></li>
-                                <li><a href="#">Cost Reduction</a></li>
+                                <li><a href="#">Discovery & Planning</a></li>
+                                <li><a href="#">Strategy & Design</a></li>
+                                <li><a href="#">Execution & Support</a></li>
                             </ul>
                         </div>
                     </div>
@@ -326,14 +326,14 @@
                                 <h2 class="h4 font-weight-600 mb-0 text-white">Need help?</h2>
                             </div>
                             <ul class="mb-0 list-unstyled list-style02">
-                                <li>Call us directly? <br>
+                                <!-- <li>Call us directly? <br>
                                     <a href="tel:+254202713345">(+254) 20 271 3345 </a>
-                                </li>
+                                </li> -->
                                 <li>Need support?<br>
-                                    <a href="mailto:info.dtglobal@gmail.com">info.dtglobal@gmail.com</a>
+                                    <a href="mailto:dtglobal87@gmail.com">dtglobal87@gmail.com</a>
                                 </li>
                                 <li>Locate me?<br>
-                                    <a href="">Africa Corporate Office</a>
+                                    <a href="">Global</a>
                                 </li>
                             </ul>
                         </div>
