--- a/services.html
+++ b/services.html
@@ -66,7 +66,7 @@
                                         <li><a href="about.html">About Us</a></li>
                                         <li><a href="services.html">Services</a>
                                             <ul>
-                                               <li><a href="business-advisor.html">Business Advisor</a></li>
+                                               <li><a href="business-advisor.html">Business Advisory</a></li>
                                                <li><a href="business-consultant.html">Business Consultant</a></li> 
                                             </ul>
                                         </li>
@@ -182,7 +182,7 @@
                             </div>
                             <div class="card-body p-1-6 p-xxl-2-3">
                             <h4 class="mb-3">
-                                <a href="business-advisor.html">Why Our Business Consulting Team Is the Right Partner for Your Growth</a>
+                                <a href="business-advisor.html">Business Strategies</a>
                             </h4>
                             <p class="mb-4">As a seasoned business consulting organization with a proven track record, we specialize in helping businesses unlock their full potential. </p>
                             <div class="blog-author">
@@ -204,7 +204,7 @@
                             </div>
                             <div class="card-body p-1-6 p-xxl-2-3">
                                 <h4 class="mb-3">
-                                    <a href="business-advisor.html">Strategic Solutions from a Trusted Business Consulting Partner</a>
+                                    <a href="business-advisor.html">Economic Advisory</a>
                                 </h4>
                                 <p class="mb-4">As a trusted business consulting partner, we specialize in crafting tailored strategies that address your unique challenges and drive sustainable growth. </p>
                                 <div class="blog-author">
@@ -226,7 +226,7 @@
                             </div>
                             <div class="card-body p-1-6 p-xxl-2-3">
                             <h4 class="mb-3">
-                                <a href="business-advisor.html">How a Business Consultant Can Drive Sales, Marketing, and HR Excellence</a>
+                                <a href="business-advisor.html">Strategic Management in Services</a>
                             </h4>
                             <p class="mb-4">A skilled business consultant brings transformative insights to your organization’s core functions, including sales, marketing, and human resources. Here’s how.</p>
                             <div class="blog-author">
@@ -241,50 +241,7 @@
 
                         </article>
                     </div>
-                    <div class="col-md-6 col-xl-4 mt-2-9 wow fadeInUp" data-wow-delay="200ms">
-                        <article class="card card-style05 h-100 rounded">
-                            <div class="blog-img rounded-top">
-                                <img src="img/services/service-list-5.jpg" alt="..." class="rounded-top">
-                            </div>
-                            <div class="card-body p-1-6 p-xxl-2-3">
-                                <h4 class="mb-3">
-                                    <a href="business-advisor.html">The Role of a Business Consultant in Scaling Your Business</a>
-                                </h4>
-                                <p class="mb-4">Scaling your business requires strategic planning, operational efficiency, and market expansion—areas where a business consultant plays a crucial role. Here’s how they help.</p>
-                                <div class="blog-author">
-                                    <div class="me-auto">
-                                        <span class="blog-date">Learn More</span>
-                                        <div class="author-name">
-                                            <a href="business-advisor.html">View Details</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </article>
-                    </div>
-                    <div class="col-md-6 col-xl-4 mt-2-9 wow fadeInUp" data-wow-delay="200ms">
-                        <article class="card card-style05 h-100 rounded">
-                            <div class="blog-img rounded-top">
-                                <img src="img/services/service-list-6.jpg" alt="..." class="rounded-top">
-                            </div>
-                            <div class="card-body p-1-6 p-xxl-2-3">
-                                <h4 class="mb-3">
-                                    <a href="business-advisor.html">Proven Results: Success Stories with our Business Consulting Services</a>
-                                </h4>
-                                <p class="mb-4">Over the years, We are helped numerous businesses unlock their potential and achieve remarkable growth through tailored business consulting strategies. Here are a few success stories that highlight the impact of our services.</p>
-                                <div class="blog-author">
-                                    <div class="me-auto">
-                                        <span class="blog-date">Learn More</span>
-                                        <div class="author-name">
-                                            <a href="business-advisor.html">View Details</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </article>
-                    </div>
+                    
                 </div>
             </div>
         </section>
@@ -446,22 +403,22 @@
                             </div>
                             <ul class="mb-0 list-unstyled list-style02">
                                 <li><a href="business-advisor.html">Ai Development</a></li>
-                                <li><a href="business-advisor.html">Business Strategy</a></li>
-                                <li><a href="business-advisor.html">Financial Modeling</a></li>
-                                <li><a href="business-advisor.html">Marketing Strategy</a><li>
-                                <li><a href="business-advisor.html">Financial Advisory</a></li>
+                                <li><a href="business-consultant.html">Business Strategies</a></li>
+                                <li><a href="business-advisor.html">Economic Advisory</a></li>
+                                <!-- <li><a href="business-advisor.html">Business Management</a></li> -->
+                                <li><a href="business-advisor.html">Strategic Management in Services</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-2 mt-2-6">
                         <div>
                             <div class="section-title-01 mb-1-6">
-                                <h2 class="h4 font-weight-600 mb-0 text-white">Our Skills</h2>
+                                <h2 class="h4 font-weight-600 mb-0 text-white">Our Process</h2>
                             </div>
                             <ul class="mb-0 list-unstyled list-style02">
-                                <li><a href="#">Client Satisfaction</a></li>
-                                <li><a href="#">Projects Completed</a></li>
-                                <li><a href="#">Cost Reduction</a></li>
+                                <li><a href="#">Discovery & Planning</a></li>
+                                <li><a href="#">Strategy & Design</a></li>
+                                <li><a href="#">Execution & Support</a></li>
                             </ul>
                         </div>
                     </div>
@@ -471,14 +428,14 @@
                                 <h2 class="h4 font-weight-600 mb-0 text-white">Need help?</h2>
                             </div>
                             <ul class="mb-0 list-unstyled list-style02">
-                                <li>Call us directly? <br>
+                                <!-- <li>Call us directly? <br>
                                     <a href="tel:+254202713345">(+254) 20 271 3345 </a>
-                                </li>
+                                </li> -->
                                 <li>Need support?<br>
-                                    <a href="mailto:info.dtglobal@gmail.com">info.dtglobal@gmail.com</a>
+                                    <a href="mailto:dtglobal87@gmail.com">dtglobal87@gmail.com</a>
                                 </li>
                                 <li>Locate me?<br>
-                                    <a href="">Africa Corporate Office</a>
+                                    <a href="">Global</a>
                                 </li>
                             </ul>
                         </div>
