for live changes

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                                     <ul class="navbar-nav ms-auto" id="nav" style="display: none;">
                                         <li><a href="index.html">Home</a></li>
                                         <li><a href="about.html">About Us</a></li>
-                                        <li><a href="services.html">Services</a> 
+                                        <li><a href="services.html">Services</a>
                                             <ul>
                                                <li><a href="business-advisor.html">Business Advisory</a></li> 
                                                <li><a href="business-consultant.html">Business Consultant</a></li>
@@ -124,9 +124,9 @@
                                 <span class="text-primary display-30 text-uppercase small letter-spacing-4 d-block mb-3 font-weight-700">About us</span>
                                 <h2 class="display-4 font-weight-800 lh-1 ls-minus-2px mb-0">Our global approach to service delivery helps provide value-added services to clients</h2>
                             </div>
-                            <p class="mb-2-0 lead fs-6 text-secondary font-weight-600 wow fadeInUp" data-wow-delay="200ms"><strong>DT-Global in India</strong> operates through entities established under the laws of India and is owned and managed by experienced Indian professionals. Since its establishment in August 1993, DT-Global India has built a strong and competitive presence across the country, delivering high-quality professional services across multiple industries.</p>
+                            <p class="mb-2-0 lead fs-6 text-secondary font-weight-600 wow fadeInUp" data-wow-delay="200ms"><strong>DT-Global in Global</strong> operates through entities established under the laws of and is owned and managed by experienced Global professionals. Since its establishment in August 1993, DT-Global Global has built a strong and competitive presence across the country, delivering high-quality professional services across multiple industries.</p>
 
-                            <p class="mb-2-0 lead fs-6 text-secondary font-weight-600 wow fadeInUp" data-wow-delay="200ms">Today, DT-Global India has a robust national footprint with offices in <strong>14 key cities,</strong> including <strong>Ahmedabad, Bengaluru, Chandigarh, Chennai, Gurugram, Hyderabad, Jaipur, Kochi, Kolkata, Mumbai, Noida, Pune, Vadodara, and Vijayawada.</strong> This extensive presence enables DT-Global to serve clients effectively with deep local expertise and a strong understanding of regional markets.</p>
+                            <p class="mb-2-0 lead fs-6 text-secondary font-weight-600 wow fadeInUp" data-wow-delay="200ms">Today, DT-Global has a strong global footprint with offices across multiple key regions worldwide. This extensive international presence enables DT-Global to serve clients effectively with deep local expertise, global insights, and a strong understanding of diverse regional markets.</p>
                             
                         </div>
                     </div>
@@ -252,7 +252,7 @@
                                     <img src="img/icons/icon-11.png" alt="..." class="w-50px">
                                 </div>
                                 <h3 class="h4 mb-2"><a href="#">What we do</a></h3>
-                                <p class="mb-1-9">At DT-Global in India, our people are driven by a shared purpose—to create meaningful impact today while building a better, more sustainable world for future generations. We partner with organizations across industries to address complex business challenges, navigate change, and unlock long-term value, Through our deep industry knowledge, local insights, and global perspectives.</p>
+                                <p class="mb-1-9">At DT-Global in Global, our people are driven by a shared purpose—to create meaningful impact today while building a better, more sustainable world for future generations. We partner with organizations across industries to address complex business challenges, navigate change, and unlock long-term value, Through our deep industry knowledge, local insights, and global perspectives.</p>
                                 <!-- <a href="#" class="service-butn">Read More<i class="ti-arrow-right"></i></a> -->
                             </div>
                             <div class="card-overlay"></div>
@@ -265,7 +265,7 @@
                                     <img src="img/icons/icon-13.png" alt="..." class="w-50px">
                                 </div>
                                 <h3 class="h4 mb-2"><a href="#">Our Role</a></h3>
-                                <p class="mb-1-9">At DT-Global in India, our people are united by a shared purpose—to make a meaningful impact today while building a better world for future generations. Whether addressing complex business challenges or promoting lifelong learning within our communities, we are committed to creating lasting value for society.</p>
+                                <p class="mb-1-9">At DT-Global in Global, our people are united by a shared purpose—to make a meaningful impact today while building a better world for future generations. Whether addressing complex business challenges or promoting lifelong learning within our communities, we are committed to creating lasting value for society.</p>
                                 <!-- <a href="#" class="service-butn">Read More<i class="ti-arrow-right"></i></a> -->
                             </div>
                             <div class="card-overlay"></div>
@@ -583,7 +583,7 @@
                                 <li><a href="business-consultant.html">Business Strategies</a></li>
                                 <li><a href="business-advisor.html">Economic Advisory</a></li>
                                 <!-- <li><a href="business-advisor.html">Business Management</a></li> -->
-                                <li><a href="business-advisor.html">Strategic Management in Services</a></li>
+                                <li><a href="business-advisor.html">Strategic Management</a></li>
                             </ul>
                         </div>
                     </div>
