--- a/business-consultant.html
+++ b/business-consultant.html
@@ -132,7 +132,7 @@
                     <div class="col-lg-6 mt-1-9">
                         <div class="">
                             <div class="section-title01 mb-1-9 wow fadeInUp" data-wow-delay="100ms">
-                                <span class="text-primary text-uppercase small letter-spacing-4 d-block mb-3 font-weight-700">Consult with India’s leading Business Consultant</span>
+                                <span class="text-primary text-uppercase small letter-spacing-4 d-block mb-3 font-weight-700">Consult with Global leading Business Consultant</span>
                                 <h3 class="lh-1 my-3">Business Strategy:</h3>
                                 <p>Assisting clients in developing and implementing strategic plans is one of our core areas of expertise. We work closely with businesses to identify their long-term objectives and create a roadmap to achieve sustainable growth. Our approach includes:</p>
                             </div>
@@ -417,7 +417,7 @@
                                 <li><a href="business-consultant.html">Business Strategies</a></li>
                                 <li><a href="business-advisor.html">Economic Advisory</a></li>
                                 <!-- <li><a href="business-advisor.html">Business Management</a></li> -->
-                                <li><a href="business-advisor.html">Strategic Management in Services</a></li>
+                                <li><a href="business-advisor.html">Strategic Management</a></li>
                             </ul>
                         </div>
                     </div>
