--- a/contact.html
+++ b/contact.html
@@ -207,10 +207,10 @@
                                 <h2 class="display-4 font-weight-800 lh-1 ls-minus-2px mb-0">Have questions? we are here to help you!</h2>
                             </div>
                             <div class="row mt-n1-9 mb-6 g-5 wow fadeInUp" data-wow-delay="150ms">
-                                <div class="col-sm-6 mt-1-9">
+                                <!-- <div class="col-sm-6 mt-1-9">
                                     <h4>Africa</h4>
                                     <p class="mb-0">Africa Corporate Office</p>
-                                </div>
+                                </div> -->
                                 <!-- <div class="col-sm-6 mt-1-9">
                                     <h4>Phone</h4>
                                     <p class="mb-0"><a href="tel:+254202713345" class="text-primary text-secondary-hover">(+254) 20 271 3345</a></p>
@@ -304,7 +304,7 @@
                                 <li><a href="business-consultant.html">Business Strategies</a></li>
                                 <li><a href="business-advisor.html">Economic Advisory</a></li>
                                 <!-- <li><a href="business-advisor.html">Business Management</a></li> -->
-                                <li><a href="business-advisor.html">Strategic Management in Services</a></li>
+                                <li><a href="business-advisor.html">Strategic Management</a></li>
                             </ul>
                         </div>
                     </div>
