--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                         <div class="col-md-9 col-xs-12">
                             <div class="top-bar-info">
                                 <ul class="ps-0">
-                                    <li><i class="ti-mobile"></i>(+123) 456 7890</li>
-                                    <li class="d-none d-sm-inline-block"><i class="ti-email"></i>info@dtglobal.com</li>
+                                    <li class="d-none d-sm-inline-block"><i class="ti-email"></i>dtglobal87@gmail.com</li>
                                 </ul>
                             </div>
                         </div>
@@ -212,17 +211,6 @@
                         </div>
                         <div class="card-overlay"></div>
                     </div>
-                    <!-- <div class="card card-style03 rounded border-0">
-                        <div class="card-body position-relative z-index-9">
-                            <div class="service-img">
-                                <img src="img/icons/icon-12.png" alt="..." class="w-50px">
-                            </div>
-                            <h3 class="h4 mb-2"><a href="#">Business Management</a></h3>
-                            <p class="mb-1-9">Building data-driven forecasts to support informed business decisions.</p>
-                            <a href="#" class="service-butn">Read More<i class="ti-arrow-right"></i></a>
-                        </div>
-                        <div class="card-overlay"></div>
-                    </div> -->
                     <div class="card card-style03 rounded border-0">
                         <div class="card-body position-relative z-index-9">
                             <div class="service-img">
@@ -533,7 +521,7 @@
                                 <li><a href="business-consultant.html">Business Strategies</a></li>
                                 <li><a href="business-advisor.html">Economic Advisory</a></li>
                                 <!-- <li><a href="business-advisor.html">Business Management</a></li> -->
-                                <li><a href="business-advisor.html">Strategic Management in Services</a></li>
+                                <li><a href="business-advisor.html">Strategic Management</a></li>
                             </ul>
                         </div>
                     </div>
