--- a/services.html
+++ b/services.html
@@ -406,7 +406,7 @@
                                 <li><a href="business-consultant.html">Business Strategies</a></li>
                                 <li><a href="business-advisor.html">Economic Advisory</a></li>
                                 <!-- <li><a href="business-advisor.html">Business Management</a></li> -->
-                                <li><a href="business-advisor.html">Strategic Management in Services</a></li>
+                                <li><a href="business-advisor.html">Strategic Management</a></li>
                             </ul>
                         </div>
                     </div>
