--- a/business-advisor.html
+++ b/business-advisor.html
@@ -172,7 +172,7 @@
                     <div class="col-md-9 col-lg-8">
                         <div class="section-title text-center wow fadeInUp" data-wow-delay="200ms">
                             <h2 class="display-4 font-weight-800 lh-1 ls-minus-2px mb-5 text-white">Business Advisor Mr.Thamizh will help you to achieve your business goals faster than you ever imagine,  FREE Consultation:</h2>
-                            <a class="butn-style02" href="tel:7708877077">Call: 7708877077</a>
+                            <a class="butn-style02" href="mailto:dtglobal87@gmail.com">dtglobal87@gmail.com</a>
                         </div>
                     </div>
                 </div>
@@ -306,7 +306,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <a class="butn-style02" href="#">YES, I WANT THIS FREE DOWNLOAD</a>
+
                         </div>
             </div>
         </section>
@@ -399,7 +399,7 @@
                                 <li><a href="business-consultant.html">Business Strategies</a></li>
                                 <li><a href="business-advisor.html">Economic Advisory</a></li>
                                 <!-- <li><a href="business-advisor.html">Business Management</a></li> -->
-                                <li><a href="business-advisor.html">Strategic Management in Services</a></li>
+                                <li><a href="business-advisor.html">Strategic Management</a></li>
                             </ul>
                         </div>
                     </div>
