for live changes

--- a/about.html
+++ b/about.html
@@ -124,9 +124,10 @@
                                 <span class="text-primary display-30 text-uppercase small letter-spacing-4 d-block mb-3 font-weight-700">About us</span>
                                 <h2 class="display-4 font-weight-800 lh-1 ls-minus-2px mb-0">Our global approach to service delivery helps provide value-added services to clients</h2>
                             </div>
-                            <p class="mb-2-0 lead fs-6 text-secondary font-weight-600 wow fadeInUp" data-wow-delay="200ms"><strong>DT-Global in Global</strong> operates through entities established under the laws of and is owned and managed by experienced Global professionals. Since its establishment in August 1993, DT-Global Global has built a strong and competitive presence across the country, delivering high-quality professional services across multiple industries.</p>
+                            <p class="mb-2-0 lead fs-6 text-secondary font-weight-600 wow fadeInUp" data-wow-delay="200ms"><strong>DT-Global</strong> operates through entities established under applicable laws and is owned and managed by experienced global professionals. DT-Global focuses on driving business growth potential by delivering strategic, high-quality professional services that support sustainable expansion and long-term value creation across multiple industries.</p>
 
-                            <p class="mb-2-0 lead fs-6 text-secondary font-weight-600 wow fadeInUp" data-wow-delay="200ms">Today, DT-Global has a strong global footprint with offices across multiple key regions worldwide. This extensive international presence enables DT-Global to serve clients effectively with deep local expertise, global insights, and a strong understanding of diverse regional markets.</p>
+                            <p class="mb-2-0 lead fs-6 text-secondary font-weight-600 wow fadeInUp" data-wow-delay="200ms">Today, DT-Global has a strong global footprint with offices across multiple key regions worldwide. This extensive international presence enables DT-Global to support business development initiatives through deep local expertise, global insights, and a strong understanding of diverse regional markets.</p>
+
                             
                         </div>
                     </div>
@@ -218,8 +219,8 @@
                                 <i class="fa-solid fa-phone-volume text-white display-22"></i>
                             </div>
                             <div>
-                                <small class="text-white display-28">Toll Free call</small>
-                                <h5 class="mb-0 text-white"><a href="tel:+254202713345">(+254) 20 271 3345</a></h5>
+                                <small class="text-white display-28">Need Support?</small>
+                                <h5 class="mb-0 text-white"><a href="mailto:dtglobal87@gmail.com">dtglobal87@gmail.com</a></h5>
                             </div>
                         </li>
                     </ul>
@@ -429,9 +430,8 @@
             </div>
         </section>
 
-        <!-- TEAM
-        ================================================== -->
-        <section class="overflow-visible">
+        <!-- TEAM -->
+        <!-- <section class="overflow-visible">
             <div class="container">
                 <div class="mb-1-9 mb-md-6 text-center wow fadeInUp" data-wow-delay="100ms">
                     <span class="text-primary text-uppercase small letter-spacing-4 d-block mb-3 font-weight-700">Our Team</span>
@@ -524,7 +524,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!--FOOTER -->
         <footer class="pt-2-2 footer">
