--- a/services.html
+++ b/services.html
@@ -254,7 +254,7 @@
         </section>
 
         <!-- TEAM -->
-        <section class="overflow-visible">
+        <!-- <section class="overflow-visible">
             <div class="container">
                 <div class="mb-1-9 mb-md-6 text-center wow fadeInUp" data-wow-delay="100ms">
                     <span class="text-primary text-uppercase small letter-spacing-4 d-block mb-3 font-weight-700">Our Team</span>
@@ -347,7 +347,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
        <!--FOOTER -->
         <footer class="pt-2-2 footer">
